...
            countries = uiState.countries,
            selectedIndex = uiState.selectedCountryIndex,
            errorMessage = uiState.countryErrorMessage,
            onOptionSelect = { index -> onAction(SepaFormUiAction.OnCountrySelect(index)) },
        )

        val holderNameLabel = "paymentAccounts.holderName".i18n()
        SepaTextField(
            entry = uiState.holderNameEntry,
            label = holderNameLabel,
            placeholder = "paymentAccounts.createAccount.prompt".i18n(holderNameLabel.lowercase()),
            onValueChange = { onAction(SepaFormUiAction.OnHolderNameChange(it)) },
        )
...
    BisqTheme.Preview {
        SepaFormContent(
            uiState =
                SepaFormUiState(
                    countries = listOf(Country("DE", "Germany"), Country("FR", "France")),
                    selectedCountryIndex = 0,
                    holderNameEntry = DataEntry(value = "Alice Doe"),
                    ibanEntry = DataEntry(value = "DE89370400440532013000"),
                    bicEntry = DataEntry(value = "DEUTDEFF"),
                    availableAcceptedCountries =
                        listOf(
                            PickerItem("DE", "Germany"),
                            PickerItem("FR", "France"),
...
