...
        } else {
            "bisqEasy.takeOffer.bitcoinPaymentData.warning.LN".i18n()
        }

    WarningConfirmationDialog(
        message = warningText,
        dismissButtonText = "action.close".i18n(),
        confirmButtonText = "bisqEasy.takeOffer.bitcoinPaymentData.warning.proceed".i18n(),
        onConfirm = onConfirm,
        onDismiss = onDismiss,
        horizontalAlignment = Alignment.Start,
        verticalButtonPlacement = true,
    )
...
