...
    modifier: Modifier = Modifier,
) {
    Column(modifier = modifier) {
        BisqTextFieldV0(
            value = uiState.holderNameEntry.value,
            onValueChange = { onAction(WiseFormUiAction.OnHolderNameChange(it)) },
            label = "paymentAccounts.holderName".i18n(),
            placeholder =
                "paymentAccounts.createAccount.prompt".i18n(
                    "paymentAccounts.holderName".i18n().lowercase(),
                ),
            isError = uiState.holderNameEntry.errorMessage != null,
            bottomMessage = uiState.holderNameEntry.errorMessage,
            singleLine = true,
        )
...
